@@ -1,0 +1,7 @@
+function main()
+    ret = nil
+
+    var = m.getvar("tx.test", "lowercase");
+
+    return ret
+end
