@@ -2,6 +2,8 @@
 v3.0.????? - ?
 ---------------------------
 
+ - Adds support for transformations inside Lua engine
+   [Issue #994 - @zimmerle]
  - Adds initial support for Lua engine.
    [Issue #994 - @zimmerle]
  - Adds support for @inspectFile operator.
